--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <title>Play SCRIMBLO!</title>
 </head>
 <body>
-    <div id="container">
+    <div id="container" onclick="copyPuzzle()">
         <header style="text-align: center">
             <h1 style="font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;padding-top: 30px;padding-bottom: 30px;padding-left: 30px;margin-top: 0px;margin-bottom: 0px;font-size: 69pt;margin-bottom: 10%;">SCRIMBLO</h1>
         </header>
@@ -108,14 +108,24 @@
       function changeMessage() { // recursively call to change the message, will be interrupted when the page loads (changes)
         setTimeout(function() {
           option = Math.floor(Math.random() * strings.length);
-          console.log(option)
-          console.log(strings[option])
           span.textContent = strings[option];
           changeMessage();
         }, 5000)
       }
 
       changeMessage();
+      function copyPuzzle() {
+        var puzzle_number = "9";
+        var line1 = ["🟨🟥➡️🟥", "⬇️🟨⬆️🟥", "🟥🟨⬅️🟥"];
+        var line2 = ["⬅️🟥🟩⬇️", "🟨⬆️🟨⬅️", "🟩⬅️🟨⬅️"]
+        var line3 = ["🟩🟨⬆️🟨", "🟩🟨🟩⬆️", "🟩⬇️🟩🟩"]
+        var line4 = "🟩🟩🟩🟩";
+        var option1 = Math.floor(Math.random() * line1.length);
+        var option2 = Math.floor(Math.random() * line2.length);
+        var option3 = Math.floor(Math.random() * line3.length);
+        var puzzle = `Scrimblo\nPuzzle #${puzzle_number}\n${line1[option1]}\n${line2[option2]}\n${line3[option3]}\n${line4}\n`
+        navigator.clipboard.writeText(puzzle);
+      }
     </script>
 </body>
 </html>
