Add assets for twitter card

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <!-- NO PEEKING!!! -zen -->
 <html lang="en">
 <head>
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="https://playscrimblo.net/" />
+    <meta name="twitter:title" content="Play Scrimblo!" />
+    <meta name="twitter:description" content="The only scramble-push game on the internet!" />
+    <meta name="twitter:image" content="https://playscrimblo.net/scrimblo.png" />
     <style>
       header {
           align-items: left;
